Bug 42390 - Writer FORMATTING: A4 paper format in incorrect on Farsi
Summary: Writer FORMATTING: A4 paper format in incorrect on Farsi
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.3 release
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:3.6.0 target:3.5.4
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-30 01:06 UTC by Hojjatollah
Modified: 2012-04-26 03:46 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
paperformat1.JPG (65.66 KB, image/jpeg)
2011-11-01 04:43 UTC, Hojjatollah
Details
paperformat2.JPG (53.28 KB, image/jpeg)
2011-11-01 04:43 UTC, Hojjatollah
Details
writer.JPG (54.09 KB, image/jpeg)
2011-11-01 04:43 UTC, Hojjatollah
Details
paperformat4.JPG (62.13 KB, image/jpeg)
2011-11-01 04:43 UTC, Hojjatollah
Details
a4 document, produced in 3.5.1.2 with Farsi UI on Windows XP (8.51 KB, application/vnd.oasis.opendocument.text)
2012-04-18 23:20 UTC, sasha.libreoffice
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hojjatollah 2011-10-30 01:06:06 UTC
Problem description: 
after change interface to farsi when chage measear to centemeter
page margin not change from 300cm 


Steps to reproduce:
1. ....
2. ....
3. ....

Current behavior:

Expected behavior:

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (Windows NT 6.1; rv:7.0.1) Gecko/20100101 Firefox/7.0.1
Comment 1 Rainer Bielefeld Retired 2011-10-30 05:46:21 UTC
Created attachment 52990 [details]
paperformat1.JPG

I do not understand the report.

@Hojjatollah:
Please describe more detailed (step by step) attach screenshots with comments!

- Reported with Bug Submission Assistant -
Comment 2 Hojjatollah 2011-11-01 04:43:36 UTC
i mean in farsi gui and centemeter unit gui i can not have a4paper

On 10/30/11, bugzilla-daemon@freedesktop.org
<bugzilla-daemon@freedesktop.org> wrote:
> https://bugs.freedesktop.org/show_bug.cgi?id=42390
>
> Rainer Bielefeld <LibreOffice@bielefeldundbuss.de> changed:
>
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
>                  CC|                            |LibreOffice@bielefeldundbus
>                    |                            |s.de
>            Keywords|                            |NEEDINFO
>
> --- Comment #1 from Rainer Bielefeld <LibreOffice@bielefeldundbuss.de>
> 2011-10-30 05:46:21 PDT ---
> I do not understand the report.
>
> @Hojjatollah:
> Please describe more detailed (step by step) attach screenshots with
> comments!
>
> - Reported with Bug Submission Assistant -
>
> --
> Configure bugmail: https://bugs.freedesktop.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You reported the bug.
>
Comment 3 Hojjatollah 2011-11-01 04:43:37 UTC
Created attachment 52991 [details]
paperformat2.JPG
Comment 4 Hojjatollah 2011-11-01 04:43:37 UTC
Created attachment 52992 [details]
writer.JPG
Comment 5 Hojjatollah 2011-11-01 04:43:37 UTC
Created attachment 52993 [details]
paperformat4.JPG
Comment 6 sasha.libreoffice 2012-04-18 23:20:16 UTC
Created attachment 60294 [details]
a4 document, produced in 3.5.1.2 with Farsi UI on Windows XP
Comment 7 sasha.libreoffice 2012-04-18 23:27:36 UTC
reproduced in 3.5.1.2 on Windows XP 32 bit, LibreOffice UI - Farsi, Windows locale - Russian
Steps to reproduce:
0. Start Libreoffice, change language to Farsi, close
1. Start Writer
Expected: A4 format of paper with correct size
Actually: A4 is 300X300 cm. To ensure it, open "Page format" (on Farsi, double click on status bar second field from right)

In attachment result of step 1.
Comment 8 sasha.libreoffice 2012-04-18 23:30:25 UTC
@ Andras Timar
What do You think about this bug?
Comment 9 Andras Timar 2012-04-19 05:11:14 UTC
Translations of 'mm' and 'cm' in vcl/source/src.po contain a zero width non-joiner character (U+200c) and this causes the bug. When I remove it, the dialog works as expected. BTW this conversion problem will occur everyhere, where this type of measurement unit control is used. 

Option A: remove the zero width non-joiner character - I don't know if it is required here.
Option B: fix the underlying bug (probably not by me, because I'm not an expert)

Let me know.
Comment 10 sasha.libreoffice 2012-04-19 05:17:57 UTC
@ Caolan
What do You think about this bug?
Comment 11 Caolán McNamara 2012-04-26 03:29:33 UTC
I'll bite
Comment 12 Not Assigned 2012-04-26 03:35:33 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=87f91c0142d20d7b6782dfc27a6837966bd678da

Resolves: fdo#42390 allow zwj, etc. in metric unit text
Comment 13 sasha.libreoffice 2012-04-26 03:37:38 UTC
Thanks for fixing
Comment 14 Not Assigned 2012-04-26 03:46:56 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a61ab93a2c4db7831ca87d6b6725e0df15a644a5&g=libreoffice-3-5

Resolves: fdo#42390 allow zwj, etc. in metric unit text


It will be available in LibreOffice 3.5.4.