Resolves: fdo#42390 allow zwj, etc. in metric unit text